# car-listings-service

./: .env.example  README.md  docker-compose.override.yml  docker-compose.yml  tz.md
admin-panel/: .cta.json  Dockerfile  README.md  components.json  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
admin-panel/prod/: nginx.conf  start.sh
admin-panel/src/: router.tsx  styles.css
admin-panel/src/app/integrations/tanstack-query/: root-provider.tsx
admin-panel/src/features/auth/: login-form.tsx
admin-panel/src/features/auth/model/: types.ts  use-login-form.ts  validators.ts
admin-panel/src/features/auth/model/__tests__/: validators.test.ts
admin-panel/src/routes/: __root.tsx  index.tsx  login.tsx
admin-panel/src/shared/ui/: button.tsx  card.tsx  input.tsx
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py  users.py
backend/app/dto/: __init__.py
backend/app/models/: __init__.py  car.py
backend/app/repositories/: cars.py
backend/app/routes/: auth.py  cars.py
backend/app/services/: cars.py
scraper/: README.md
tg-bot/: Dockerfile  README.md  pyproject.toml
tg-bot/app/: config.py  db.py  handlers.py  llm.py  main.py  models.py
