[tool.poetry]
name = "car-listings-backend"
version = "0.1.0"
description = "Backend service for car listings (FastAPI + fastapi-users)"
authors = ["Roman <ashen.one.dev@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
python-dotenv = "^1.0.1"
fastapi-users = "^13.0.0"
fastapi-users-db-sqlalchemy = "^7.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
